# SpatioTemporalExploration

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: Execution.action  Execution.action~  Plan.action  Plan.action~  Scene.action
data/: all.txt  construct.sh  god.txt  god_schedule.txt  joao.data  pos.txt  tom.txt  tom_schedule.txt  ww_july.txt  ww_objects.txt
launch/: executioner.launch  exploration.launch  fremengrid.launch  gmapping_morse.launch  load_aruba.launch  load_simulation.launch  planner.launch  scheduler.launch  simulation.launch
msg/: Information.msg  Reachable.msg  Reachable.msg~  reachable.msg~
scripts/: inject_pose_server.py  sim_start.sh  sim_start.sh~
src/: CFrelement.cpp  CFrelement.h  CFremenGrid.cpp  CFremenGrid.h  CGui.cpp  CGui.h  GridPlanning.cpp  analyseGrid.cpp  exploration_benchmarking.cpp  exploration_executioner.cpp  exploration_monitor.cpp  exploration_planner.cpp  exploration_schedule_creator.cpp  exploration_scheduler.cpp  flat_diff.cpp  flat_generate_grids.cpp  flat_simulation.cpp  fremenExploration.cpp  fremenGrid.cpp  fremenUtil.cpp  frontier_exploration.cpp  grid2pic.cpp  load.cpp  morse_scene_generator.cpp  order.cpp  order.h
srv/: AddView.srv  EditValue.srv  Entropy.srv  FlatGrid.srv  SaveLoad.srv  Visualize.srv
